compiler/testData/diagnostics/tests/inference/builderInference/kt47986Default.diag.txt
/kt47986Default.kt:10:13: error: not enough information to infer type variable K
    val x = buildFoo {
            ^

